--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
+  <head></head>
   <body>
     <a href="index.html">Home</a>
     <a href=sign-in.html>Sign-In</a>
@@ -14,14 +13,34 @@
             <th>Unit Volume</th>
         </tr>
       <tr>
-        <td>Baked Beans</td>
-        <td>Canned Food</td>
-        <td>8 oz.</td>
+        <td>Apple Juice</td>
+        <td>Beverage</td>
+        <td>12 oz.</td>
       </tr>
       <tr>
-        <td>Black Beans</td>
-        <td>Canned Food</td>
-        <td>8 oz.</td>
+        <td>Apples</td>
+        <td>Canned Fruits and Vegetables</td>
+        <td>1 oz.</td>
+      </tr>
+      <tr>
+        <td>Apple Pie</td>
+        <td>Baked Goods</td>
+        <td>32 oz.</td>
+      </tr>
+      <tr>
+        <td>Cran Apple Juice</td>
+        <td>Beverages</td>
+        <td>18 oz.</td>
+      </tr>
+      <tr>
+        <td>Apple Cider</td>
+        <td>Beverages</td>
+        <td>16 oz.</td>
+      </tr>
+      <tr>
+        <td>Apple Jacks</td>
+        <td>Grains</td>
+        <td>32 oz.</td>
       </tr>
     </table>
   </body>
