--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -13,8 +13,28 @@
             <th>Unit Volume</th>
         </tr>
       <tr>
+        <td>Milk</td>
+        <td>Beverage</td>
+        <td>32 oz.</td>
+      </tr>
+      <tr>
         <td>Apple Juice</td>
         <td>Beverage</td>
+        <td>12 oz.</td>
+      </tr>
+      <tr>
+        <td>Baked Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
+      </tr>
+      <tr>
+        <td>Black Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
+      </tr>
+      <tr>
+        <td>Olive Oil</td>
+        <td>Oil</td>
         <td>12 oz.</td>
       </tr>
       <tr>
@@ -41,6 +61,56 @@
         <td>Apple Jacks</td>
         <td>Grains</td>
         <td>32 oz.</td>
+      </tr>
+      <tr>
+        <td>Grape Nuts</td>
+        <td>Grains</td>
+        <td>32 oz.</td>
+      </tr>
+      <tr>
+        <td>Grape Juice</td>
+        <td>Beverages</td>
+        <td>18 oz.</td>
+      </tr>
+      <tr>
+        <td>Orange Juice</td>
+        <td>Beverages</td>
+        <td>18 oz.</td>
+      </tr>
+      <tr>
+        <td>Orange Sherbet</td>
+        <td>Dairy Products</td>
+        <td>16 oz.</td>
+      </tr>
+      <tr>
+        <td>Kranch</td>
+        <td>Sauces</td>
+        <td>8 oz.</td>
+      </tr>
+      <tr>
+        <td>Bowtie Pasta</td>
+        <td>Pasta</td>
+        <td>20 oz.</td>
+      </tr>
+      <tr>
+        <td>Canned Tuna</td>
+        <td>Canned Meat</td>
+        <td>50 oz.</td>
+      </tr>
+      <tr>
+        <td>Chicken in a Can</td>
+        <td>Canned Meat</td>
+        <td>8 oz.</td>
+      </tr>
+      <tr>
+        <td>Dog Food</td>
+        <td>Canned Meat</td>
+        <td>8 oz.</td>
+      </tr>
+      <tr>
+        <td>Canned Coconut Milk</td>
+        <td>Canned Fruits and Vegetables</td>
+        <td>8 oz.</td>
       </tr>
     </table>
   </body>
