now using best onclick practices
Current error: A network error occurred

--- a/assets/search.html
+++ b/assets/search.html
@@ -28,7 +28,9 @@
 	
 	<p></p>
 	
-    <button onclick="search();">Search</button>
+    <button id='excecuteSearch'>Search</button>
       
+      
+    <script>document.getElementById("excecuteSearch").addEventListener('click', search);</script>
   </body>
 </html>
