--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -13,34 +13,14 @@
             <th>Unit Volume</th>
         </tr>
       <tr>
-        <td>Apple Juice</td>
-        <td>Beverage</td>
-        <td>12 oz.</td>
+        <td>Baked Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
       </tr>
       <tr>
-        <td>Apples</td>
-        <td>Canned Fruits and Vegetables</td>
-        <td>1 oz.</td>
-      </tr>
-      <tr>
-        <td>Apple Pie</td>
-        <td>Baked Goods</td>
-        <td>32 oz.</td>
-      </tr>
-      <tr>
-        <td>Cran Apple Juice</td>
-        <td>Beverages</td>
-        <td>18 oz.</td>
-      </tr>
-      <tr>
-        <td>Apple Cider</td>
-        <td>Beverages</td>
-        <td>16 oz.</td>
-      </tr>
-      <tr>
-        <td>Apple Jacks</td>
-        <td>Grains</td>
-        <td>32 oz.</td>
+        <td>Black Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
       </tr>
     </table>
   </body>
