--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+      <meta charset="utf-8"/>
+  </head>
   <body>
     <a href="index.html">Home</a>
     <a href=sign-in.html>Sign-In</a>
