Added to gitignore
gitignore seems to have problems with search_results

--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8"/>
+    <meta charset="utf-8"/>
   </head>
   <body>
     <a href="index.html">Home</a>
@@ -15,19 +15,14 @@
             <th>Unit Volume</th>
         </tr>
       <tr>
+        <td>Milk</td>
+        <td>Beverage</td>
+        <td>32 oz.</td>
+      </tr>
+      <tr>
         <td>Apple Juice</td>
         <td>Beverage</td>
         <td>12 oz.</td>
-      </tr>
-      <tr>
-        <td>Apples</td>
-        <td>Canned Fruits and Vegetables</td>
-        <td>1 oz.</td>
-      </tr>
-      <tr>
-        <td>Apple Pie</td>
-        <td>Baked Goods</td>
-        <td>32 oz.</td>
       </tr>
       <tr>
         <td>Cran Apple Juice</td>
@@ -40,9 +35,14 @@
         <td>16 oz.</td>
       </tr>
       <tr>
-        <td>Apple Jacks</td>
-        <td>Grains</td>
-        <td>32 oz.</td>
+        <td>Grape Juice</td>
+        <td>Beverages</td>
+        <td>18 oz.</td>
+      </tr>
+      <tr>
+        <td>Orange Juice</td>
+        <td>Beverages</td>
+        <td>18 oz.</td>
       </tr>
     </table>
   </body>
