--- a/assets/index.html
+++ b/assets/index.html
@@ -3,6 +3,7 @@
   <head>
   </head>
   <body>
+    <p>index</p>
     <a href="index.html">Home</a>
     <a href=sign-in.html>Sign-In</a>
     <a href="search.html">Search for a product</a>
