--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -15,34 +15,14 @@
             <th>Unit Volume</th>
         </tr>
       <tr>
-        <td>Milk</td>
-        <td>Beverage</td>
-        <td>32 oz.</td>
+        <td>Baked Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
       </tr>
       <tr>
-        <td>Apple Juice</td>
-        <td>Beverage</td>
-        <td>12 oz.</td>
-      </tr>
-      <tr>
-        <td>Cran Apple Juice</td>
-        <td>Beverages</td>
-        <td>18 oz.</td>
-      </tr>
-      <tr>
-        <td>Apple Cider</td>
-        <td>Beverages</td>
-        <td>16 oz.</td>
-      </tr>
-      <tr>
-        <td>Grape Juice</td>
-        <td>Beverages</td>
-        <td>18 oz.</td>
-      </tr>
-      <tr>
-        <td>Orange Juice</td>
-        <td>Beverages</td>
-        <td>18 oz.</td>
+        <td>Black Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
       </tr>
     </table>
   </body>
