changed sign-in button
Moved sign in button to right justify and added an id for future modification

--- a/assets/page.html
+++ b/assets/page.html
@@ -5,7 +5,7 @@
   <body>
     <p>page</p>
     <a href="index.html">Home</a>
-    <a href=sign-in.html>Sign-In</a>
     <a href="search.html">Search for a product</a>
+    <a href=sign-in.html align=right id='user'>Sign-In</a>
   </body>
 </html>
