--- a/assets/search.html
+++ b/assets/search.html
@@ -8,8 +8,8 @@
   <body>
   
 	<a href="index.html">Home</a>
-    <a href=sign-in.html>Sign-In</a>
     <a href="search.html">Search for a product</a>
+    <a href=sign-in.html align=right id='user'>Sign-In</a>
       
 	<p></p>
 	
