--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <a href="index.html">Home</a>
-    <a href=sign-in.html>Sign-In</a>
     <a href="search.html">Search for a product</a>
+    <a href=sign-in.html align=right id='user'>Sign-In</a>
     <h2>Search Results</h2>
     <table>
         <tr>
