--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -18,11 +18,37 @@
         <td>Baked Beans</td>
         <td>Canned Food</td>
         <td>8 oz.</td>
+        <td>Serve Spokane</td>
       </tr>
       <tr>
         <td>Black Beans</td>
         <td>Canned Food</td>
         <td>8 oz.</td>
+        <td>Serve Spokane</td>
+      </tr>
+      <tr>
+        <td>Baked Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
+        <td>Second Harvest</td>
+      </tr>
+      <tr>
+        <td>Black Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
+        <td>Second Harvest</td>
+      </tr>
+      <tr>
+        <td>Baked Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
+        <td>Mead Food Bank</td>
+      </tr>
+      <tr>
+        <td>Black Beans</td>
+        <td>Canned Food</td>
+        <td>8 oz.</td>
+        <td>Mead Food Bank</td>
       </tr>
     </table>
   </body>
