--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -15,40 +15,34 @@
             <th>Unit Volume</th>
         </tr>
       <tr>
-        <td>Baked Beans</td>
-        <td>Canned Food</td>
-        <td>8 oz.</td>
-        <td>Serve Spokane</td>
+        <td>Apple Juice</td>
+        <td>Beverage</td>
+        <td>12 oz.</td>
       </tr>
       <tr>
-        <td>Black Beans</td>
-        <td>Canned Food</td>
-        <td>8 oz.</td>
-        <td>Serve Spokane</td>
+        <td>Apples</td>
+        <td>Canned Fruits and Vegetables</td>
+        <td>1 oz.</td>
       </tr>
       <tr>
-        <td>Baked Beans</td>
-        <td>Canned Food</td>
-        <td>8 oz.</td>
-        <td>Second Harvest</td>
+        <td>Apple Pie</td>
+        <td>Baked Goods</td>
+        <td>32 oz.</td>
       </tr>
       <tr>
-        <td>Black Beans</td>
-        <td>Canned Food</td>
-        <td>8 oz.</td>
-        <td>Second Harvest</td>
+        <td>Cran Apple Juice</td>
+        <td>Beverages</td>
+        <td>18 oz.</td>
       </tr>
       <tr>
-        <td>Baked Beans</td>
-        <td>Canned Food</td>
-        <td>8 oz.</td>
-        <td>Mead Food Bank</td>
+        <td>Apple Cider</td>
+        <td>Beverages</td>
+        <td>16 oz.</td>
       </tr>
       <tr>
-        <td>Black Beans</td>
-        <td>Canned Food</td>
-        <td>8 oz.</td>
-        <td>Mead Food Bank</td>
+        <td>Apple Jacks</td>
+        <td>Grains</td>
+        <td>32 oz.</td>
       </tr>
     </table>
   </body>
