Float:right of sign-in button

--- a/assets/profile.html
+++ b/assets/profile.html
@@ -6,8 +6,8 @@
   <body>
     <a href="index.html">Home</a>
     <a href="search.html">Search for a product</a>
-    <a href=sign-in.html align=right id='user'>Sign-In</a>
+    <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
     
-<p>Your username is: bobby</p>    </table>
+<p>Your username is: bobby</p>    
   </body>
 </html>
