--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,6 @@
     <p>index</p>
     <a href="index.html">Home</a>
     <a href="search.html">Search for a product</a>
-    <a href=sign-in.html align=right id='user'>Sign-In</a>
+    <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
   </body>
 </html>
