--- a/assets/page.html
+++ b/assets/page.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8"/>
   </head>
   <body>
     <p>page</p>
     <a href="index.html">Home</a>
     <a href="search.html">Search for a product</a>
-    <a href=sign-in.html align=right id='user'>Sign-In</a>
+    <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
   </body>
 </html>
