--- a/assets/search.html
+++ b/assets/search.html
@@ -9,7 +9,7 @@
   
 	<a href="index.html">Home</a>
     <a href="search.html">Search for a product</a>
-    <a href=sign-in.html align=right id='user'>Sign-In</a>
+    <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
       
 	<p></p>
 	
