--- a/assets/newAccount.html
+++ b/assets/newAccount.html
@@ -8,7 +8,8 @@
     <a href="search.html">Search for a product</a>
     <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
       
-      
+    <h2>This page doesn't do anything yet</h2>
+    <h5>Coming Soon!</h5>
     <fieldset >
       <legend>Create an Account</legend>
       <input type='hidden' name='submitted' id='submitted' value='1'/>
