--- a/assets/sign-in.html
+++ b/assets/sign-in.html
@@ -9,7 +9,7 @@
     <a href="search.html">Search for a product</a>
     <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
       
-      
+    <h3>Log In to see your profile and previous transactions!</h3>
     <fieldset >
       <legend>Login</legend>
       <input type='hidden' name='submitted' id='submitted' value='1'/>
