--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -6,7 +6,7 @@
   <body>
     <a href="index.html">Home</a>
     <a href="search.html">Search for a product</a>
-    <a href=sign-in.html align=right id='user'>Sign-In</a>
+    <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
     <h2>Search Results</h2>
     <table>
         <tr>
