--- a/assets/profile.html
+++ b/assets/profile.html
@@ -8,9 +8,9 @@
     <a href="search.html">Search for a product</a>
     <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
     
-<p>Username: bobby</p>
-      <p>Email: rab.greenup@gmail.com</p>
-      <p>Preferd Location: Second Harvest</p>
+<p>Username: PeteTucker5</p>
+      <p>Email: ptucker@whitworth.edu</p>
+      <p>Preferd Location: Serve Spokane</p>
     <h2>Search Results</h2>
     <table>
         <tr>
@@ -20,11 +20,53 @@
             <th>Date</th>
             <th>Type of Transaction</th>
         </tr>      <tr>
-        <td>Orange Juice</td>
+        <td>Baked Beans</td>
         <td>Serve Spokane</td>
-        <td>10</td>
+        <td>2</td>
+        <td>2021-12-08 00:00:00</td>
+        <td>Donation</td>
+      </tr>
+      <tr>
+        <td>Milk</td>
+        <td>Serve Spokane</td>
+        <td>1</td>
+        <td>2021-12-08 00:00:00</td>
+        <td>Donation</td>
+      </tr>
+      <tr>
+        <td>Milk</td>
+        <td>Serve Spokane</td>
+        <td>30</td>
+        <td>2021-12-09 00:00:00</td>
+        <td>Donation</td>
+      </tr>
+      <tr>
+        <td>Milk</td>
+        <td>Second Harvest</td>
+        <td>4</td>
+        <td>2021-12-09 00:00:00</td>
+        <td>Transaction</td>
+      </tr>
+      <tr>
+        <td>Orange Juice</td>
+        <td>Second Harvest</td>
+        <td>5</td>
+        <td>2021-12-09 00:00:00</td>
+        <td>Donation</td>
+      </tr>
+      <tr>
+        <td>Grape Juice</td>
+        <td>Second Harvest</td>
+        <td>2</td>
+        <td>2021-12-09 00:00:00</td>
+        <td>Donation</td>
+      </tr>
+      <tr>
+        <td>Canned Tuna</td>
+        <td>Second Harvest</td>
+        <td>20</td>
         <td>2021-12-14 00:00:00</td>
-        <td>None</td>
+        <td>Donation</td>
       </tr>
     </table>
   </body>
