Clean up and update
Changed to access, updated packet sending to send 1500B packets

--- a/assets/search_results.html
+++ b/assets/search_results.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8"/>
-  </head>
+  <head></head>
   <body>
     <a href="index.html">Home</a>
+    <a href=sign-in.html>Sign-In</a>
     <a href="search.html">Search for a product</a>
-    <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
     <h2>Search Results</h2>
     <table>
         <tr>
@@ -43,11 +41,6 @@
         <td>Apple Jacks</td>
         <td>Grains</td>
         <td>32 oz.</td>
-      </tr>
-      <tr>
-        <td>Apple Pie Yogurt</td>
-        <td>Dairy Products</td>
-        <td>4 oz.</td>
       </tr>
     </table>
   </body>
