--- a/assets/index.html
+++ b/assets/index.html
@@ -4,9 +4,7 @@
   </head>
   <body>
     <a href="index.html">Home</a>
+    <a href=sign-in.html>Sign-In</a>
     <a href="search.html">Search for a product</a>
-    <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
-      
-    <h1>Welcome!</h1>
   </body>
 </html>
