--- a/assets/newAccount.html
+++ b/assets/newAccount.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+    <script src="index2.js"></script>
   </head>
   <body>
-    <a href="index.html">Home</a>
-    <a href="search.html">Search for a product</a>
-    <a href=sign-in.html style="float:right;" id='user'>Sign-In</a>
-      
-    <h2>This page doesn't do anything yet</h2>
-    <h5>Coming Soon!</h5>
     <fieldset >
       <legend>Create an Account</legend>
       <input type='hidden' name='submitted' id='submitted' value='1'/>
